--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,37 +1,40 @@
-primary_name: "Your Name"
+primary_name: "Yuanting Fan"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Yuanting Fan"
 
 positions:
-- name: Position without logo
-- logo: /assets/images/badges/PKU_red.png
-  name: B.S., Peking University (2021)
+# - name: Position without logo
+- logo: /assets/images/badges/xjtu_red.png
+  name: MSE, Xi'an Jiaotong University (2022)
 
-email: "your@email.com"
+email: "retofan@stu.xjtu.edu.cn"
 # cv_link: link-to-your-cv-file
-gscholar: your_google_scholar_id
-github: your_github_id
-twitter: your_twitter_id
+gscholar: SD4CZKAAAAAJ
+github: RetoFan233
+# twitter: your_twitter_id
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-# linkedin: your-linked-in-id
+# linkedin: your_linkedin_id
 # orcid: 0000-0000-0000-0000
 
 short_bio: >-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+  The student of Xi'an Jiaotong University. Major in Computer Vision; Super-Resolution; Generative Models; Multimodal Large Language Model; Anomaly Detection.
 
 portrait_url: /assets/images/photos/portrait.jpg
-portrait_caption: >-
-  Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
+# portrait_caption: >-
+#   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
-- name: Peking University
-  logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2017 - Jul. 2021
+- name: Xi'an Jiaotong University
+  logo: /assets/images/badges/xjtu_red.png
+  position: MSE in Software Engineering
+  date: Sep. 2022 - Jul. 2025
+
+- name: Chang'an University
+  logo: /assets/images/badges/chd_blue.jpg
+  position: B.S. in Software Engineering
+  date: Sep. 2018 - Jul. 2022
 
 # experience:
 # - name: Peking University
@@ -40,10 +43,10 @@ education:
 #   date: Sep. 2019 - Jul. 2021
 
 
-awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+# awards:
+# - name: Award Name 2
+#   date: 2024
+# - name: Award Name 1
+#   date: 2021
+# - name: A quick brown fox jumps over the lazy dog and runs away award
+#   date: 2021
